--- a/templates/about.page.tmpl
+++ b/templates/about.page.tmpl
@@ -3,4 +3,11 @@
 {{define "content"}}
 <h1>This is the About page</h1>
 <h2>{{index .StringMap "test"}}</h2>
+<p>
+    {{if ne (index .StringMap "remote_ip") ""}}
+    Your IP address is {{index .StringMap "remote_ip"}}
+    {{else}}
+    I don't know your IP address yet. Visit the <a href="/">Home page</a> so i can set it.
+    {{end}}
+</p>
 {{end}}
