--- a/templates/base.layout.tmpl
+++ b/templates/base.layout.tmpl
@@ -211,7 +211,7 @@
                 title = "",
             } = c;
 
-            const { value: formValues } = await Swal.fire({
+            const { value: result } = await Swal.fire({
                 title: title,
                 html: msg,
                 backdrop: false,
@@ -236,8 +236,18 @@
                 }
             })
 
-            if (formValues) {
-                Swal.fire(JSON.stringify(formValues))
+            if (result) {
+                if (result.dismiss !== Swal.DismissReason.cancel) {
+                    if (result.value !== "") {
+                        if (c.callback !== undefined) {
+                            c.callback(result)
+                        }
+                    } else {
+                        c.callback(false)
+                    }
+                } else {
+                    c.callback(false)
+                }
             }
         }
 
