--- a/templates/generals.page.tmpl
+++ b/templates/generals.page.tmpl
@@ -74,6 +74,14 @@
         attention.custom({
             title: 'Choose your dates',
             msg: html,
+            callback: function(result) {
+                fetch('/search-availability-json')
+                    .then(response => response.json())
+                    .then(data => {
+                        console.log(data.ok)
+                        console.log(data.message)
+                    })
+            }
         });
     })
 </script>
